syntax="proto3";
package cart;
option go_package="./pkg/cart/pb";
service CartService{
    rpc AddToCart(CreateCartRequest) returns (CreateCartResponse) {}
    rpc GetCart (GetCartRequest) returns (GetCartResponse) {}
    rpc GetCartItems(GetCartItemsRequest) returns (GetCartItemsResponse);
}

message CreateCartRequest{
    string userid=1;
    string productid=2;
    int64 quantity=3;
}
message CreateCartResponse{
    int64 status=1;
    string error=2;
    int64 id=3;
}

message Cart {
    int64 id = 1;  // Cart ID
    string user_id = 2;  // User ID (foreign key)
    string product_id = 3;
    int64 qty = 4;
    double price = 5;
    double amount = 6;
}
message GetCartRequest {
  string userid = 1;
}
message GetCartResponse{
    int64 status=1;
    string error=2;
    repeated Cart carts = 3;  // List of carts
}

message GetCartItemsRequest {
    string userid = 1;
}

message GetCartItemsResponse {
    int64 status = 1;
    string error = 2;
    repeated CartItem items = 3;
}

message CartItem {
    int64 id = 1;
    string userid = 2;
    string productid = 3;
    int64 quantity = 4;
    double price = 5;
    double amount = 6;
}